[gd_scene load_steps=2 format=3 uid="uid://chnhbepr464uw"]

[ext_resource type="Script" uid="uid://berrm8mumlyed" path="res://source/custom_nodes/DropdownBox.gd" id="1_btham"]

[node name="DropdownBox" type="Control"]
custom_minimum_size = Vector2(134, 24)
layout_mode = 3
anchors_preset = 0
offset_right = 130.0
offset_bottom = 163.0
size_flags_horizontal = 3
script = ExtResource("1_btham")
folded = true

[node name="FoldableContainer" type="FoldableContainer" parent="."]
custom_minimum_size = Vector2(134, 0)
layout_mode = 0
offset_right = 134.0
offset_bottom = 55.0
focus_mode = 0
folded = true

[node name="VBoxContainer" type="VBoxContainer" parent="FoldableContainer"]
visible = false
show_behind_parent = true
layout_mode = 2

[node name="Label" type="Label" parent="."]
show_behind_parent = true
layout_mode = 0
offset_left = 20.0
offset_top = 3.0
offset_right = 124.0
offset_bottom = 18.0
mouse_filter = 0
text = "DropdownBox"
metadata/_edit_lock_ = true

[connection signal="minimum_size_changed" from="FoldableContainer/VBoxContainer" to="." method="_on_v_box_container_minimum_size_changed"]
